--- a/WorldDumper.csproj
+++ b/WorldDumper.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net48</TargetFramework>
     <BepInExPluginGuid>shishyando.WK.WorldDumper</BepInExPluginGuid>
     <BepInExPluginName>WorldDumper</BepInExPluginName>
-    <Version>0.3.2</Version>
-    <Description>More console commands for White Knuckle</Description>
+    <Version>0.3.3</Version>
+    <Description>Log everything in White Knuckle world.</Description>
     <PluginUrl>https://github.com/shishyando/WK_WorldDumper</PluginUrl>
     <DependenciesJson>["BepInEx-BepInExPack-5.4.2100"]</DependenciesJson>
     <ManifestOutput>$(ProjectDir)manifest.json</ManifestOutput>
