Move files a bit

--- a/WorldDumper.csproj
+++ b/WorldDumper.csproj
@@ -21,6 +21,15 @@
     </RestoreAdditionalProjectSources>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PythonCmd Condition="'$(OS)' == 'Windows_NT'">py -3</PythonCmd>
+    <PythonCmd Condition="'$(OS)' != 'Windows_NT'">python3</PythonCmd>
+    <ThunderstoreScript>$([System.IO.Path]::Combine('$(ProjectDir)','scripts','thunderstore.py'))</ThunderstoreScript>
+    <GenerateReadmeScript>$([System.IO.Path]::Combine('$(ProjectDir)','scripts','generate_readme.py'))</GenerateReadmeScript>
+    <ReadmePath>$([System.IO.Path]::Combine('$(ProjectDir)','README.md'))</ReadmePath>
+    <IconPath>$([System.IO.Path]::Combine('$(ProjectDir)','img','icon.png'))</IconPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Core" Version="5.*" />
@@ -48,7 +57,7 @@
   </ItemGroup>
 
   <Target Name="GenerateReadme" BeforeTargets="Build">
-    <Exec Command='python "$(ProjectDir)generate_readme.py"' WorkingDirectory="$(ProjectDir)" />
+    <Exec Command='$(PythonCmd) "$(GenerateReadmeScript)"' WorkingDirectory="$(ProjectDir)" />
   </Target>
 
   <Target Name="GenerateManifest" AfterTargets="Build">
@@ -65,8 +74,7 @@
   </Target>
 
   <Target Name="ThunderstorePackage" AfterTargets="Build">
-    <Exec
-      Command='python "$(ProjectDir)thunderstore.py" --out "$(ZipOutputPath)" --readme "$(ProjectDir)README.md" --manifest "$(ProjectDir)manifest.json" --icon "$(ProjectDir)img\icon.png" --dll "$(TargetPath)"' />
+    <Exec Command='$(PythonCmd) "$(ThunderstoreScript)" --out "$(ZipOutputPath)" --readme "$(ReadmePath)" --manifest "$(ManifestOutput)" --icon "$(IconPath)" --dll "$(TargetPath)"' />
   </Target>
 
 </Project>
