--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 "name": "WorldDumper",
-"version_number": "0.4.0",
+"version_number": "0.5.0",
 "website_url": "https://github.com/shishyando/WK_WorldDumper",
-"description": "Log everything in White Knuckle world.",
+"description": "Log everything in White Knuckle world. Writes .jsonl files with all events, entites, levels, etc.",
 "dependencies": ["BepInEx-BepInExPack-5.4.2100"]
 }
